[fix] NameError: name ‘__file__’ is not defined

--- a/face_api.ipynb
+++ b/face_api.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "load_dotenv(verbose=True)\n",
-    "dotenv_path = join(dirname(__file__), '.env')\n",
+    "dotenv_path = join(dirname('__file__'), '.env')\n",
     "subscription_key = os.environ.get(\"AZURE_KEY\")"
    ]
   },
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
